// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="No Colour Flag"
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    no colour
  </Text>
</View>
`;

exports[`2. red article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="Coloured Red Flag"
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    coloured red
  </Text>
</View>
`;

exports[`3. hex colour article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="Coloured Red Flag"
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    coloured red
  </Text>
</View>
`;

exports[`4. rgba colour article flag 1`] = `
<View>
  <View />
  <Text
    accessibilityLabel="Coloured Red Flag"
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    coloured red
  </Text>
</View>
`;

exports[`5. article flags 1`] = `
<View>
  <View>
    <View>
      <View />
      <Text
        accessibilityLabel="updated Flag"
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
      >
        updated
      </Text>
    </View>
  </View>
  <View>
    <View>
      <View />
      <Text
        accessibilityLabel="exclusive Flag"
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
      >
        exclusive
      </Text>
    </View>
  </View>
</View>
`;

exports[`6. article flags with container 1`] = `
<View>
  <View>
    <View>
      <View>
        <View />
        <Text
          accessibilityLabel="updated Flag"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
        >
          updated
        </Text>
      </View>
    </View>
    <View>
      <View>
        <View />
        <Text
          accessibilityLabel="exclusive Flag"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
        >
          exclusive
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`7. article flags with no flags 1`] = `null`;
